--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "apsl-react-native-button": "^3.1.0",
     "firebase": "^4.10.0",
+    "promise-polyfill": "7.1.0",
     "react": "16.2.0",
     "react-native": "0.53.3",
     "react-native-elements": "^0.19.0",
+    "react-native-textinput-effects": "^0.4.2",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.1.2"
   },
